--- a/ReptileTracker/ReptileTracker.csproj
+++ b/ReptileTracker/ReptileTracker.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <InvariantGlobalization>false</InvariantGlobalization>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>d1d62852-9573-4c30-ad4a-c547c1fb4621</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -25,6 +26,10 @@
       <PackageReference Include="Serilog" Version="3.1.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
