--- a/ReptileTracker/Dockerfile
+++ b/ReptileTracker/Dockerfile
@@ -1,5 +1,7 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -8,14 +10,14 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["ReptileTracker/ReptileTracker.csproj", "ReptileTracker/"]
-RUN dotnet restore "ReptileTracker/ReptileTracker.csproj"
+RUN dotnet restore "./ReptileTracker/./ReptileTracker.csproj"
 COPY . .
 WORKDIR "/src/ReptileTracker"
-RUN dotnet build "ReptileTracker.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./ReptileTracker.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "ReptileTracker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./ReptileTracker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
