--- a/ReptileTracker/appsettings.json
+++ b/ReptileTracker/appsettings.json
@@ -11,7 +11,7 @@
     "StackBlockedRequests": false,
     "ClientIdHeader": "X-Client-Id",
     "HttpStatusCode": 429,
-    "EndpointWhitelist": ["*:/api/status"],
+    "EndpointWhitelist": [ "*:/api/status" ],
     "GeneralRules": [
       {
         "Endpoint": "*",
@@ -26,21 +26,25 @@
     ]
   },
   "ClientRateLimitPolicies": {
-    "ClientRules": [{
-      "Rules": [
-        {
-          "Endpoint": "*",
-          "Period": "10s",
-          "Limit": 5
-        },
-        {
-          "Endpoint": "*",
-          "Period": "12h",
-          "Limit": 250
-        }
-      ]
-    }
+    "ClientRules": [
+      {
+        "Rules": [
+          {
+            "Endpoint": "*",
+            "Period": "10s",
+            "Limit": 5
+          },
+          {
+            "Endpoint": "*",
+            "Period": "12h",
+            "Limit": 250
+          }
+        ]
+      }
     ]
+  },
+  "ConnectionStrings": {
+    "reptileDb": "Server=host.docker.internal,1433;Database=master;User Id=sa;Password=zoeyRuleThemAll1337;TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
