Added output caching

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@
 /ReptileTracker/bin/Debug/net8.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
 /ReptileTracker/bin/Debug/net8.0/Microsoft.IdentityModel.Tokens.dll
 /ReptileTracker/bin/Debug/net8.0/System.IdentityModel.Tokens.Jwt.dll
+/ReptileTracker/obj/Debug/net8.0/ReptileTracker.csproj.CoreCompileInputs.cache
+/ReptileTracker/obj/Debug/net8.0/ReptileTracker.csproj.FileListAbsolute.txt
